Revisions made by Robert Palmer

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/3sixtyClass.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.json-simple-1.1.jar=C:\\Users\\palmerfam\\Documents\\byui classes\\Fall 2018\\CIT 360\\json-simple-1.1.jar\\json-simple-1.1.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.json-simple-1.1.jar}:\
+    ${libs.Java-EE-GlassFish-v3-Prelude.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
