The following items were added by Robert Palmer. JSON, Use case documentation, threads, and MVC.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 /build/
+/MyServlet/nbproject/private/
+/src/MyServlet/nbproject/private/
+/src/com/MyServlet/nbproject/private/
+/HelloWorldServlet/nbproject/private/
+/HelloWorldServlet/build/
