CSS added to Servlet to add some color and life.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /HelloWorldServlet/nbproject/private/
 /HelloWorldServlet/build/
 /dist/
+/HibernateProject/nbproject/private/
+/HibernateProject/build/
