--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,7 +32,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.json-simple-1.1.jar}:\
-    ${libs.Java-EE-GlassFish-v3-Prelude.classpath}
+    ${libs.Java-EE-GlassFish-v3-Prelude.classpath}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
