ACP, threads, runnables, and executors were created by Robert

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /dist/
 /HibernateProject/nbproject/private/
 /HibernateProject/build/
+/MathServletAPC/nbproject/private/
+/WebApplication1/nbproject/private/
+/AppControlPattern/nbproject/private/
